Bug 149268 - FILEOPEN: particular document will CRASH after opening the navigator
Summary: FILEOPEN: particular document will CRASH after opening the navigator
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
: 149293 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-24 17:51 UTC by Rainer Bielefeld Retired
Modified: 2022-05-27 09:57 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Document (1.25 MB, application/vnd.oasis.opendocument.text)
2022-05-24 17:51 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2022-05-24 17:51:39 UTC
Created attachment 180348 [details]
Sample Document

Steps how to reproduce with attached sample document and  Server Installation of Version: 7.4.0.0.alpha0+ (x64)  Build ID b871abad383583f02eb49c7e49aeae01f6941072
CPU threads: 12; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
LLocale: de-DE (de_DE); UI: en-US  |  Calc: CL  |  Auto Colibre Theme  |  Special devUserProfile:

0. LaunchLibO
1. From StartCenter: Menu ˋFiel → open → browse for sample document → Openˊ
   » CRASH     😥

Additional Info
---------------
a) worked fine with Installation of Version: 7.3.3.2 (x64) 
Build ID: d1d0ea68f081ee2800a922cac8f79445e4603348
CPU threads: 12; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE |  Calc: threaded | ElementaryTheme | My normal User Profile	
b) Trying Document recovery ends up in endless crash loop.
c) Crash reports: bc0e3e08-7783-40a3-bbca-b60c3dbeb24c ,
   8f93a713-2542-41b6-ad17-909451479c8e,  4a2e7506-12bd-4946-95d1-0b2082debd10
   0ecdd4e7-c38a-42c5-a6e1-f9130418f2e9,  278c0779-807f-4276-a5f1-90fd7a24e8aa
Comment 1 Rainer Bielefeld Retired 2022-05-24 17:53:52 UTC
d) I can't tell whether there is a DUP in query <https://bugs.documentfoundation.org/buglist.cgi?cmdtype=dorem&remaction=run&namedcmd=DUPs149268&sharer_id=19321>
Comment 2 Telesto 2022-05-25 06:24:30 UTC
Confirm the crash on Windows; but not on macOS
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: cdf8e971d5d46df4bcab35a99c4254df9459213f
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-GB
Calc: CL Jumbo
Comment 3 Xisco Faulí 2022-05-25 08:29:07 UTC
Not reproduced in

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: b6e0ae1b1bad5e222e21bbb4b2a158c1fc6f9779
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 4 Xisco Faulí 2022-05-25 09:34:54 UTC
No crash in

Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: ba2c5e05319181aa00357d66ba2fbaba20231bd3
CPU threads: 16; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: en-GB (en_GB); UI: en-US
Calc: threaded

either
Comment 5 Xisco Faulí 2022-05-25 09:38:36 UTC
(In reply to Telesto from comment #2)
> Confirm the crash on Windows; but not on macOS
> Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
> Build ID: cdf8e971d5d46df4bcab35a99c4254df9459213f
> CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
> Locale: en-US (nl_NL); UI: en-GB
> Calc: CL Jumbo

Can't reproduce it even with the same build id

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: cdf8e971d5d46df4bcab35a99c4254df9459213f
CPU threads: 16; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: en-GB (en_GB); UI: en-US
Calc: threaded
Comment 6 Telesto 2022-05-25 09:40:40 UTC
Attempting a bibisect right now.. to see if it makes sense..
Comment 7 Telesto 2022-05-25 09:45:52 UTC
I'm unable to reproduce it in safe-mode and unable to reproduce it in bibisect repro.. but having 2 portable installations of 7.4 crashing
Comment 8 Telesto 2022-05-25 09:47:48 UTC
STR
1. Open Writer
2. Open the sidebar -> Navigator deck
3. Open the file -> Crash
Comment 9 Xisco Faulí 2022-05-25 09:51:02 UTC
Ok, I know how to reproduce it.
1. Open the file
2. Open the navigator

bisecting...
Comment 10 Xisco Faulí 2022-05-25 09:57:15 UTC
Regression introduced by:

author	Jim Raykowski <raykowj@gmail.com>	2022-04-19 22:02:22 -0800
committer	Jim Raykowski <raykowj@gmail.com>	2022-04-28 04:41:47 +0200
commit 4c0939f900b862ae8abe585617d51898a7c0caf0 (patch)
tree f657243cc12deb11fcea0ed763f0f28ad1caeca4
parent fecc129799c1ceb733dd65d3ccf28f61555b19f2 (diff)
SwNavigator: Improve ordering of hyperlinks in text frames

Bisected with: bibisect-linux64-7.4

Adding Cc: to Jim Raykowski
Comment 11 Jim Raykowski 2022-05-26 07:28:16 UTC
Here is a link to a proposed patch:
https://gerrit.libreoffice.org/c/core/+/134978
Comment 12 Commit Notification 2022-05-27 07:07:51 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ba0a713fe76da5ee40ad34b375d3a900bff4e01a

tdf#149268 avoid null pointer dereference

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Xisco Faulí 2022-05-27 08:35:42 UTC
Verified in

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: a8df5c815c8b002b7083b8777e3dd8beac573bf3
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Jim, thanks for fixing this issue!!
Comment 14 Xisco Faulí 2022-05-27 08:36:48 UTC
*** Bug 149293 has been marked as a duplicate of this bug. ***
Comment 15 Commit Notification 2022-05-27 09:57:25 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7a8a25456b39eb6238571c7932eef8e44291ed84

tdf#149268: sw: Add UItest

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.