tdf#149268 avoid null pointer dereference

Change-Id: Iff3aece9eaed40c31764616504f1a4229db57e01